fix text overflowing

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -44,9 +44,10 @@ body {
   align-items: start;
 
   @media only screen and (max-width: $break-point-verytiny) {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
-    column-gap: 7rem;
   }
 
   &__container {
@@ -76,11 +77,6 @@ body {
     text-align: left;
     @media only screen and (max-width: $break-point-small) {
       font-size: 1.2rem;
-      margin: 0;
-    }
-
-    @media only screen and (max-width: $break-point-tiny) {
-      font-size: 1.6rem;
       margin: 0;
     }
   }
